<resources>
    <string name="app_name">ViewHomework</string>
    <string name="e_mail">Введите свой e-mail</string>
    <string name="write_password">Введите пароль</string>
    <string name="enter">Я подтверждаю, что мне исполнилось 18 лет</string>
    <string name="login">Вход</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="anr_error">ANR error</string>
    <string name="Uncorrectly">Ошибка! Некорректно заполнена форма входа</string>
    <string name="next_page">next page</string>
    <string name="themeOfMessage">Тема письма</string>
    <string name="send_e_mail">send e-mail</string>
</resources>